[tool.poetry]
name = "case-transacoes-pix"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
